force-app/main/default/objects/Contact_Product__c/fields/My_Home_Product__c.field-meta.xml
<CustomField>
    <fullName>My_Home_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>マイホーム製品</label>
    <referenceTo>My_Home_Products__c</referenceTo>
    <relationshipLabel>Contact Product</relationshipLabel>
    <relationshipName>Contact_Product</relationshipName>
    <type>Lookup</type>
</CustomField>