force-app/main/default/objects/Contact_Product__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <label>購入日</label>
    <type>Date</type>
</CustomField>